# esp32s3-snoring-detector

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/camera_ctl/: CMakeLists.txt  camera_ctl.cpp  camera_ctl.hpp  image_utils.cpp  image_utils.h
components/i2s_microphone/: CMakeLists.txt  i2s_microphone.cpp  i2s_microphone.hpp
components/led_ctl/: CMakeLists.txt  led_ctl.cpp  led_ctl.hpp
components/lwmqtt-esp-mqtt/: Makefile  esp_lwmqtt.c  esp_mqtt.c  esp_tls_lwmqtt.c
components/lwmqtt-esp-mqtt/lwmqtt/: library.json
components/lwmqtt-esp-mqtt/lwmqtt/examples/: async.c  sync.c
components/lwmqtt-esp-mqtt/lwmqtt/include/lwmqtt/: posix.h
components/lwmqtt-esp-mqtt/lwmqtt/src/: posix.c
components/lwmqtt-esp-mqtt/lwmqtt/tests/: client.cpp  helpers.cpp  packet.cpp
components/mqtt_client/: CMakeLists.txt  MQTTClient.cpp  MQTTClient.hpp  MQTTClient_old.cpp
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
tools/: save_audio_chunks.py
